<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".NotificationActivity">

<TextView
    android:id="@+id/tv_example_text_quiz"
    android:layout_width="334dp"
    android:layout_height="71dp"
    android:layout_marginTop="16dp"
    android:text="@string/do_not_write_more_than_200_words"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/tv_example_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_example_label_quiz" />

<TextView
    android:id="@+id/tv_definition_label_quiz"
    android:layout_width="125dp"
    android:layout_height="34dp"
    android:layout_marginTop="12dp"
    android:text="@string/definition"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/tv_type_text_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_type_text_quiz" />

<TextView
    android:id="@+id/tv_antonym_text_quiz"
    android:layout_width="129dp"
    android:layout_height="32dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="16dp"
    android:text="@string/none"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/tv_antonym_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_synonym_text_quiz" />

    <TextView
        android:id="@+id/tv_type_text_quiz"
        android:layout_width="323dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/noun"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_word_quiz"
        app:layout_constraintTop_toBottomOf="@+id/tv_word_quiz" />

<TextView
    android:id="@+id/tv_example_label_quiz"
    android:layout_width="174dp"
    android:layout_height="27dp"
    android:layout_marginTop="12dp"
    android:text="@string/example_sentence"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/tv_definition_text_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_definition_text_quiz" />

<TextView
    android:id="@+id/tv_synonym_label_quiz"
    android:layout_width="146dp"
    android:layout_height="31dp"
    android:layout_marginTop="12dp"
    android:text="@string/synonym_of_word"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/tv_example_text_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_example_text_quiz" />

<TextView
    android:id="@+id/tv_synonym_text_quiz"
    android:layout_width="131dp"
    android:layout_height="29dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="12dp"
    android:text="@string/phrase"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toEndOf="@+id/tv_synonym_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_example_text_quiz" />

<TextView
    android:id="@+id/tv_definition_text_quiz"
    android:layout_width="336dp"
    android:layout_height="93dp"
    android:layout_marginTop="8dp"
    android:text="@string/countable_a_single_unit_of_language_that_means_something_and_can_be_spoken_or_written"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@+id/tv_definition_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_definition_label_quiz" />

<TextView
    android:id="@+id/tv_antonym_label_quiz"
    android:layout_width="144dp"
    android:layout_height="34dp"
    android:layout_marginTop="16dp"
    android:text="@string/aow"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="@+id/tv_synonym_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_synonym_label_quiz" />

    <TextView
        android:id="@+id/tv_word_quiz"
        android:layout_width="355dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/word"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/btn_memorized"
    android:layout_width="325dp"
    android:layout_height="67dp"
    android:layout_marginTop="24dp"
    android:text="@string/done_memorized"
    app:layout_constraintStart_toStartOf="@+id/tv_antonym_label_quiz"
    app:layout_constraintTop_toBottomOf="@+id/tv_antonym_label_quiz" />

<Button
    android:id="@+id/btn_remind"
    android:layout_width="323dp"
    android:layout_height="67dp"
    android:layout_marginTop="28dp"
    android:text="@string/remind_me_later"
    app:layout_constraintStart_toStartOf="@+id/btn_memorized"
    app:layout_constraintTop_toBottomOf="@+id/btn_memorized" />

</androidx.constraintlayout.widget.ConstraintLayout>