<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartLearningActivity">


    <TextView
        android:id="@+id/tv_word"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/word"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_next_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/next_word"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/btn_add_to_my_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/add_to_my_words"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:id="@+id/tv_definition_text"
        android:layout_width="336dp"
        android:layout_height="93dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/countable_a_single_unit_of_language_that_means_something_and_can_be_spoken_or_written"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_definition_label" />

    <TextView
        android:id="@+id/tv_definition_label"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/definition"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_text" />

    <TextView
        android:id="@+id/tv_example_label"
        android:layout_width="174dp"
        android:layout_height="27dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/example_sentence"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_definition_text" />

    <TextView
        android:id="@+id/tv_example_text"
        android:layout_width="334dp"
        android:layout_height="71dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/do_not_write_more_than_200_words"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_example_label" />

    <TextView
        android:id="@+id/tv_synonym_label"
        android:layout_width="146dp"
        android:layout_height="31dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/synonym_of_word"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_example_text" />

    <TextView
        android:id="@+id/tv_synonym_text"
        android:layout_width="131dp"
        android:layout_height="29dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="8dp"
        android:text="@string/phrase"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_example_text" />

    <TextView
        android:id="@+id/tv_antonym_label"
        android:layout_width="144dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="Antonym of word"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_synonym_label" />

    <TextView
        android:id="@+id/tv_antonym_text"
        android:layout_width="129dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/none"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_antonym_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_synonym_text" />

    <TextView
        android:id="@+id/tv_type_text"
        android:layout_width="122dp"
        android:layout_height="33dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/noun"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_word" />

</androidx.constraintlayout.widget.ConstraintLayout>